--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1>Speisekarte</h1>
 
             <div class="menu-category">
-                <h2>Raps</h2>
+                <h2>Wraps</h2>
                 <div class="menu-item" data-id="1" data-name="Halber Schinken Wrap" data-price="3.00">
                     <div class="item-info"><span class="item-name">Halber Schinken Wrap</span><span class="item-price">3,00 €</span></div>
                     <div class="quantity-selector"><button class="quantity-btn minus-btn">-</button><span class="quantity">0</span><button class="quantity-btn plus-btn">+</button></div>
@@ -461,4 +461,5 @@
 
     <script type="module" src="app.js"></script>
 </body>
+
 </html>
